--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerSuccessPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerSuccessPage.vm
@@ -24,7 +24,7 @@ $(function(){
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
         <div class="nav"><a id="btn-logout"
 			href="javascript:;">登出</a>|<a 
-			href="javascript:;">注册</a>|<a
+			href="javascript:;">注册</a>|<a class="member" 
 			href="javascript:;">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
     </div>
