--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
@@ -31,6 +31,11 @@ $(function(){
             _this.siblings(".tips-normal").hide();
         }
     });
+	
+	$("#btn-logout").on("click",function(){
+		$("#form-addBankCard").attr("action", "../cust/logout.htm");
+		$("#form-addBankCard").submit();
+	});
 });
 </script>
 </head>
@@ -39,8 +44,8 @@ $(function(){
     <div class="header">
         <div class="inner clearfix rel">
             <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-            <div class="nav"><a 
-				href="javascript:;">登录</a>|<a 
+            <div class="nav"><a id="btn-logout"
+				href="javascript:;">登出</a>|<a 
 				href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
 				href="${staticDomain}/cust/login.htm">我的幼富通</a>|<a class="last" 
 				href="javascript:;">帮助</a></div>
