--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
@@ -117,6 +117,11 @@ $(function(){
 		}
 	});
 	
+	$("#btn-logout").on("click",function(){
+		$("#form-addBankCardAuth").attr("action", "../cust/logout.htm");
+		$("#form-addBankCardAuth").submit();
+	});
+	
 });
 </script>
 </head>
@@ -126,8 +131,8 @@ $(function(){
     <div class="header">
         <div class="inner clearfix rel">
             <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-            <div class="nav"><a 
-				href="javascript:;">登录</a>|<a 
+            <div class="nav"><a id="btn-logout"
+				href="javascript:;">登出</a>|<a 
 				href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
 				href="javascript:;">我的幼富通</a>|<a class="last" 
 				href="javascript:;">帮助</a></div>
