--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
@@ -27,42 +27,38 @@
             </div>
         </div>
         <div class="form-cash">
-            <form class="common-form">
+            <form class="common-form" action="${ufbDomain}/trade/cash_result.htm" method="post">
+				##${refreshTools.genInputHtml()}
+				<input id="bankno" name="bankno" value="${curCard.bankno}" type="hidden"/>
+				<input id="bankid" name="bankid" value="${curCard.serialid}" type="hidden"/>
                 <ul>
                     <li>
                         <span class="form-title">总资产</span>
-                        <div class="mark">0.00元</div>
+                        <div class="mark">${totalBalanceDisplay}元</div>
+                        <i id="totalBalance" style="display:none">${totalBalance}</i>
                     </li>
                     <li class="clearfix">
                         <span class="form-title">银行选择</span>
                         <div class="input-select">
                             <div class="card card-current">
-                                <img src="images/bank_01.png">
-                                <span class="card-lastNumber">尾号：8888</span>
+								#set($tailStr=$curCard.bankaccodisplay)
+								#set($start=$tailStr.length() - 4)
+								#set($end=$tailStr.length())
+                                <img src="${staticDomain}/images/bank_${curCard.bankno}.png">
+                                <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                             </div>
                             <div class="input-options">
                                 <div class="card-list clearfix">
-                                    <a class="card" href="javascript:;">
-                                        <img src="images/bank_01.png">
-                                        <span class="card-lastNumber">尾号：8888</span>
+									#foreach($card in $cardList)
+                                    <a class="card" href="javascript:;"
+										bankno="${card.bankno}" bankid="${card.serialid}" cardBalance="1000.00元">
+										#set($tailStr=$card.bankaccodisplay)
+										#set($start=$tailStr.length() - 4)
+										#set($end=$tailStr.length())
+										<img src="${staticDomain}/images/bank_${card.bankno}.png">
+                                        <span class="card-lastNumber">尾号：$tailStr.substring($start,$end)</span>
                                     </a>
-                                    <a class="card" href="javascript:;">
-                                        <img src="images/bank_02.png">
-                                        <span class="card-lastNumber">尾号：8888</span>
-                                    </a>
-                                    <a class="card active" href="javascript:;">
-                                        <i class="icon"></i>
-                                        <img src="images/bank_03.png">
-                                        <span class="card-lastNumber">尾号：8888</span>
-                                    </a>
-                                    <a class="card" href="javascript:;">
-                                        <img src="images/bank_04.png">
-                                        <span class="card-lastNumber">尾号：8888</span>
-                                    </a>
-                                    <a class="card" href="javascript:;">
-                                        <img src="images/bank_05.png">
-                                        <span class="card-lastNumber">尾号：8888</span>
-                                    </a>
+									#end
                                 </div>
                             </div>
                         </div>
@@ -71,22 +67,22 @@
                     </li>
                     <li>
                         <span class="form-title">可用金额</span>
-                        <div class="mark">0.00元</div>
+                        <div id="cardBalance" class="mark">3000.00元</div>
                     </li>
                     <li>
                         <span class="form-title">取现金额</span>
-                        <input class="input-text" type="text" value="">元
+                        <input id="appamt" name="appamt" class="input-text" type="text" value="">元
                         <span class="tips-normal"></span>
-                        <span class="tips-check"><i class="icon"></i>验证提示</span>
+                        <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                     </li>
                     <li>
                         <span class="form-title">交易密码</span>
-                        <input class="input-text" type="password" value=""><a class="find" href="javascript:;">忘记密码?</a>
+                        <input id="tradePwd" name="tradePwd" class="input-text" type="password" value=""><a class="find" href="javascript:;">忘记密码?</a>
                         <span class="tips-normal"></span>
-                        <span class="tips-check"><i class="icon"></i>验证提示</span>
+                        <span id="tradePwdTips" class="tips-check"><i class="icon"></i>验证提示</span>
                     </li>
                     <li>
-                        <input class="input-button ok" type="submit" value="取&nbsp;现">
+                        <input id="submit" class="input-button ok" type="submit" value="取&nbsp;现">
                     </li>
                 </ul>
             </form>
@@ -101,6 +97,7 @@
 		$(".card").on("click", function(){
 			$("#bankno").val($(this).attr("bankno"));
 			$("#bankid").val($(this).attr("bankid"));
+			$("#cardBalance").html($(this).attr("cardBalance"));
 		});
 		
 		// 表单提交时，验证	
@@ -111,7 +108,7 @@
 				$("#appamtTips").show();
 				return false;
 			}else if($("#tradePwd").val() == ""){
-				var tradePwdMsg = "<i class=\"icon\"></i>请输入交易密码！";
+				var tradePwdMsg = '<i class=\"icon\"></i>请输入交易密码！';
 				$("#tradePwdTips").html(tradePwdMsg);
 				$("#tradePwdTips").show();
 				return false;
