--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
@@ -70,7 +70,9 @@ $(function(){
 					<input id="bankNo" name="bankNo" type="hidden" value="$!{BankCardVo.bankNo}">
 					<input id="bankAcco" name="bankAcco" type="hidden" value="$!{BankCardVo.bankAcco}">
 					<input id="bankMobile" name="bankMobile" type="hidden" value="$!{BankCardVo.bankMobile}">
-                    <div class="panel">
+                    <input id="invtp" name="invtp" type="hidden" value="$!{BankCardVo.invtp}">
+					<input id="level" name="level" type="hidden" value="$!{BankCardVo.level}">
+					<div class="panel">
                         <ul>
 							#if($errMsg)
 							<li class="error">
