交易模块，添加tradeAcco列表； 还差账户余额显示。

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
@@ -29,8 +29,7 @@
         <div class="form-cash">
             <form class="common-form" action="${ufbDomain}/trade/cash_result.htm" method="post">
 				##${refreshTools.genInputHtml()}
-				<input id="bankno" name="bankno" value="${curCard.bankno}" type="hidden"/>
-				<input id="bankid" name="bankid" value="${curCard.serialid}" type="hidden"/>
+				<input id="tradeacco" name="tradeacco" value="${curCard.tradeacco}" type="hidden"/>
                 <ul>
                     <li>
                         <span class="form-title">总资产</span>
@@ -51,7 +50,7 @@
                                 <div class="card-list clearfix">
 									#foreach($card in $cardList)
                                     <a class="card" href="javascript:;"
-										bankno="${card.bankno}" bankid="${card.serialid}" cardBalance="1000.00元">
+										tradeacco="${card.tradeacco}" cardBalance="1000.00元">
 										#set($tailStr=$card.bankaccodisplay)
 										#set($start=$tailStr.length() - 4)
 										#set($end=$tailStr.length())
@@ -95,8 +94,7 @@
 	$(function(){
 		// 页面加载时，初始化当前选中卡
 		$(".card").on("click", function(){
-			$("#bankno").val($(this).attr("bankno"));
-			$("#bankid").val($(this).attr("bankid"));
+			$("#tradeacco").val($(this).attr("tradeacco"));
 			$("#cardBalance").html($(this).attr("cardBalance"));
 		});
 		
