--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
@@ -28,7 +28,7 @@
         </div>
         <div class="form-cash">
             <form class="common-form" action="${ufbDomain}/trade/cash_result.htm" method="post">
-				##${refreshTools.genInputHtml()}
+				#${refreshTools.genInputHtml()}
 				<input id="tradeacco" name="tradeacco" value="${curCard.tradeacco}" type="hidden"/>
                 <ul>
                     <li>
