--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerPage.vm
@@ -31,6 +31,30 @@ $(function(){
 	
 	//注册按钮
 	$("#btn-org").on("click",function(){
+	
+		/**
+		if(!check_mobile($("#mobileno"))){
+			return false;
+		}
+		if(!check_code($("#verifycode"))){
+			return false;
+		}
+		if(!check_phoneCode($("#msgcode"))){
+			return false;
+		}
+		if(!check_pwd1($("#pswpwd"))){
+			return false;
+		}
+		if(!check_pwd2($("#pswpwd2"))){
+			return false;
+		}
+		if(!check_organization($("#organization"))){
+			return false;
+		}
+		if(!check_business($("#business"))){
+			return false;
+		}
+		**/
 		var errLen = $("ul li.error").length;
 		if(errLen>0){
 			$("ul li.error:eq(0) input[type=text]").focus();
@@ -49,7 +73,7 @@ $(function(){
     <div class="inner clearfix rel">
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
         <div class="nav"><a
-			href="javascript:;">登录</a>|<a 
+			href="${staticDomain}/cust/login.htm">登录</a>|<a 
 			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
 			href="javascript:;">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
@@ -119,7 +143,7 @@ $(function(){
             </div>
             <div class="panel panel-org slide-out">
                 <form method="post" action="${staticDomain}/cust/register_org.htm" id="register-org" class="common-form form-register">
-                    <input id="level_1" type="hidden" name="level" value="${CustinfoVo.level}"/>
+					<input id="level_1" type="hidden" name="level" value="${CustinfoVo.level}"/>
 					<input id="invtp" type="hidden" name="invtp" value="${CustinfoVo.invtp}"/>
 					<ul>
                         <li
@@ -141,7 +165,7 @@ $(function(){
                             <input id="verifycode" name="verifycode" class="ipt-code input-code" type="text" value="$!{CustinfoVo.verifycode}">
                             <span class="tips-normal">请输入验证码</span>
 							<span class="form-verifyCode">
-								<img src="${staticDomain}/createImageservlet" onclick="javascript:this.src=this.src+'?time='+(+new Date())"/>
+								<img src="${staticDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())"/>
 							</span>
                             <span class="tips-check"><i class="icon"></i>$!{errMsg_verifycode}</span>
                         </li>
