交易登录控制

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_index.vm
@@ -40,7 +40,7 @@
                         <span class="form-title">银行选择</span>
                         <div class="input-select">
                             <div class="card card-current">
-								#set($tailStr=$curCard.bankaccodisplay)
+								#set($tailStr=$curCard.bankacco)
 								#set($start=$tailStr.length() - 4)
 								#set($end=$tailStr.length())
                                 <img src="${staticDomain}/images/bank_${curCard.bankno}.png">
@@ -51,7 +51,7 @@
 									#foreach($card in $cardList)
                                     <a class="card" href="javascript:;"
 										tradeacco="${card.tradeacco}" cardBalance="1000.00元">
-										#set($tailStr=$card.bankaccodisplay)
+										#set($tailStr=$card.bankacco)
 										#set($start=$tailStr.length() - 4)
 										#set($end=$tailStr.length())
 										<img src="${staticDomain}/images/bank_${card.bankno}.png">
